AB#884 Apply some suggested code improvements